--- a/indext.html
+++ b/indext.html
@@ -5,25 +5,27 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>TicTacToe</title>
-    <link rel="stylesheet" href="style.css  ">
+    <link rel="stylesheet" href="TicTacToe.css"></link>
+  
 </head>
 <body>
     <table>
         <tr>
-            <td></td>
-            <td></td>
-            <td></td>
+            <td id="1"></td>
+            <td id="2"></td>
+            <td id="3"></td>
         </tr>
         <tr>
-            <td></td>
-            <td></td>
-            <td></td>
+            <td id="4"></td>
+            <td id="5"></td>
+            <td id="6"></td>
         </tr>
         <tr>
-            <td></td>
-            <td></td>
-            <td></td>
+            <td id="7"></td>
+            <td id="8"></td>
+            <td id="9"></td>
         </tr>
     </table>
+    <script src="tictactoe.js" type="text/javascript"></script>
 </body>
 </html>
