--- a/index.html
+++ b/index.html
@@ -5,8 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>TicTacToe</title>
-    <link rel="stylesheet" href="TicTacToe.css"></link>
-  
+    <link rel="stylesheet" href="tictactoe.css" type="text/css" />  
 </head>
 <body>
     <table>
