--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">  
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>TicTacToe</title>
-    <link rel="stylesheet" href="tictactoe.css" type="text/css" />  
+    <link rel="stylesheet" href="TicTacToe.css" type="text/css" />  
 </head>
 <body>
     <table>
@@ -25,6 +25,6 @@
             <td id="9"></td>
         </tr>
     </table>
-    <script src="tictactoe.js" type="text/javascript"></script>
+    <script src="TicTacToe.js" type="text/javascript"></script>
 </body>
 </html>
